<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcomemsg_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/btn_arithmetic_main"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_arithmetic_main"
        app:layout_constraintEnd_toStartOf="@+id/btn_perpangkatan_main"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_logarithm_main"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_logaritm_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_perpangkatan_main"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_trigonometry_main"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_trigonometry_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_logarithm_main"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_arithmetic_main"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_perpangkatan_main"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:text="@string/btn_perpangkatan_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_temperature_convert"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="@+id/btn_trigonometry_main"
        app:layout_constraintStart_toStartOf="@+id/btn_trigonometry_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_trigonometry_main" />

</android.support.constraint.ConstraintLayout>